update unions code